- Disable HTTP server admin port by default.
- Add automatic HTTPS configuration.
- Deprecate ConfigurationModule.installModules.
- Deprecate ConditionalModule.installModuleIf and introduce
  ConditionalModule.conditionalModule.
- Remove support for joda-time from event module.
- Migrate to ListenableFuture<Void> for future signaling.

206

- Fix SNI handling for HTTP server.
- Include server URL for HTTP client IOException.
- Log full stack trace for discovery client errors.
- Allow trailing slash for discovery client URI.
- Only reload HTTP server SSL context when files change.

205

- Add form data body builder for HTTP client.
- Add JSON Web Key Sets (JWKS) decoder and service.
- Update to Jetty 9.4.40.v20210413.
- Remove TestNG dependency from ConfigAssertions and testing module.
- Remove @Beta annotation from everything.

204

- Fix running ConfigAssertions on Java 16.
- Update to Jetty 9.4.39.v20210325.
- Allow using dashes in enum config values.
- Add support for list of strings as config values.

203

- Limit total size of HTTP client log.
- Remove HTTP method override filter.

202

- Update to Jetty 9.4.30.v20200611.
- Fix http client distribution JMX metrics.

201

- Allow expanding environment variables within config values.

200

- Add client certificate support to testing http server.

0.199

- Add certificate reloading to HTTP server. By default certificates are reloaded
  once a minute. This can be controlled with 'http-server.https.ssl-context.refresh-time'.
- Add Guice binding for HTTP server client certificate requirement.
  Note: client certificates are no longer requested by default.
- Move combine method to ConfigurationAwareModule.
- Add missing JAXB dependency for jaxrs-testing.

0.198

- Fix failures when inserting values into DecayTDigest.
- Use RejectedExecutionException in BoundedExecutor.
- Improve configuration error reporting.

0.197

- Change HttpUriBuilder to not render default port for HTTP and HTTPS.