@@ -297,6 +297,12 @@
                 <version>1.10.22</version>
             </dependency>
 
+            <dependency>
+                <groupId>com.google.errorprone</groupId>
+                <artifactId>error_prone_annotations</artifactId>
+                <version>2.7.1</version>
+            </dependency>
+
             <!-- jetty -->
             <dependency>
                 <groupId>org.eclipse.jetty</groupId>
